# TradingView-Free-Webhook-Alerts

./: .gitignore  README.md  config.example.toml  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  start-env.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Cloud Versions/: pipedream.py
cloud-versions/: pipedream.py  zapier.py
docs/: gettingstarted.md
docs/cloud-versions/: cloud-versions.md
docs/cloud-versions/pipedream/: pipedream.md
docs/cloud-versions/zapier/: zapier.md
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: PlanToRun.py  __init__.py  api_server.py  broadcast.py  constants.py  discord_utilities.py  event.py  http_status.py  logger.py  multi_task.py  network.py  smart_import.py
src/email_listener/: README.md  __init__.py  email_processing.py  email_responder.py  helpers.py  requirements.txt
src/handlers/: __intit__.py  discord_log_handler.py  email_signal_extraction.py  ngrok_signal_redirect.py
