[project]
name = "tradingview-free-webhook-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.12.14",
    "aiosignal==1.3.1",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "discord-py==2.4.0",
    "flask==3.1.1",
    "frozenlist==1.5.0",
    "html2text==2024.2.26",
    "idna==3.10",
    "imapclient==3.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "propcache==0.2.0",
    "pyfiglet==1.0.2",
    "pygments==2.18.0",
    "pyngrok>=7.2.11",
    "requests==2.32.4",
    "rich==13.9.4",
    "toml==0.10.2",
    "urllib3==2.6.0",
    "waitress==3.0.2",
    "werkzeug==3.1.3",
    "yarl==1.18.0",
]
